--- a/game-in-console.csproj
+++ b/game-in-console.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>game_in_console</RootNamespace>
   </PropertyGroup>
 
