after alpha build

--- a/game-in-console.csproj
+++ b/game-in-console.csproj
@@ -12,4 +12,8 @@
     <None Remove="Shoping\Class\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
